# solo_miner

./: .gitignore  Cargo.toml  README.md
src/: main.rs  miner.rs  settings.rs
