[package]
name = "solo_lottery_miner"
version = "0.1.0"
edition = "2024"

[dependencies]

# For serializing/deserializing the config struct
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For cryptographic hashing (SHA-256)
sha2 = "0.10" 

# For handling Bitcoin's little-endian byte ordering
byteorder = "1.4" 

# For working with hex strings (for hashes and data)
hex = "0.4"

# Comprehensive library for Bitcoin data structures and utility
bitcoin = "0.32.8" 

reqwest = { version = "0.12", features = ["blocking", "json"] }

# For securely prompting the user for the RPC password
rpassword = "7.0"
